--- a/style.css
+++ b/style.css
@@ -1,3 +1,84 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+
+*,
+*::before,
+*::after{
+    margin: 0;
+    padding: 0 ;
+    box-sizing: border-box;
+    font-family: "League Spartan" , sans-serif;
+}
+
+
+
+.display::placeholder {
+    position: absolute;
+    top: 50%;
+    left: 10%;
+    color: orange;
+    transform: translateY(-40%);
+}
+
+.check{
+    align-items: center;
+    margin: 5px;
+}
+
+.check input{
+    appearance: none;
+    border: 1px solid cyan;
+    height: 15px;
+    width: 15px;
+    border-radius: 4px;
+    cursor: pointer;
+    position: relative;
+}
+
+.check input:checked{
+    background: cyan;
+    overflow: hidden;
+}
+.check input:checked::before{
+    content: '✔';
+    font-size: 1.05rem;
+    font-weight: bolder;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+
+    transform: translateX(-50%) translateY(-40%);
+}
+
+.slider{
+    appearance: none;
+    position: relative;
+    width: 100%;
+    height: 0.85rem;
+    cursor: pointer;
+    background: rgb(86, 16, 86);
+    border-radius: 1rem;
+    margin-bottom: 1.5rem;
+    outline: none;
+    border: none;
+}
+
+.slider::-webkit-slider-thumb{
+    appearance: none;
+    height: 1.75rem;
+    width: 1.75rem;
+    border-radius: 50%;
+    background-color: yellow;
+    box-shadow: 0px 0px 20px 0px rgba(255,229,61,0.50);
+    transition: all 100ms ease-in;
+}
+
+.silder:focus{
+    outline: 10px solid yellow;
+    z-index: 1 ;
+}
+
+.slider::-webkit-slider-thumb:hover{
+    background: black;
+    border: 1px solid yellow;
+    box-shadow: 0px 0px 20px 0px yellow;
+}
+
