--- a/style.css
+++ b/style.css
@@ -67,32 +67,36 @@
     width: 100%;
     height: 0.85rem;
     cursor: pointer;
-    background: rgb(86, 16, 86);
+    background: rgb(66, 46, 115);
+    background-image: linear-gradient(var(--vb-violet), var(--vb-violet));
+    background-repeat: no-repeat;
     border-radius: 1rem;
     margin-bottom: 1.5rem;
     outline: none;
     border: none;
+    z-index: 1;
+}
+
+.slider:focus{
+    outline: 2px solid yellow ;
 }
 
 .slider::-webkit-slider-thumb{
     appearance: none;
+    position: relative;
     height: 1.75rem;
     width: 1.75rem;
     border-radius: 50%;
     background-color: yellow;
-    background-image: linear-gradient(var(--vb-violet), var(--vb-violet));
     box-shadow: 0px 0px 20px 0px rgba(255,229,61,0.50);
     transition: all 100ms ease-in;
+    z-index: 10;
 }
 
-.silder:focus{
-    outline: 10px solid yellow;
-    z-index: 1 ;
-}
 
 .slider::-webkit-slider-thumb:hover{
     background: black;
-    border: 1px solid yellow;
+    outline: 2px solid yellow;
     box-shadow: 0px 0px 20px 0px yellow;
 }
 
